--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 <body>
    <script>
       var body = document.getElementsByTagName("body")[0];
-      var button = document.createElement("button");
-      button.appendChild(document.createTextNode("Create Circuit"));
-      body.appendChild(button);
+      var buttons = {};
+      buttons.createCircuit = {};
+      buttons.createCircuit.element = document.createElement("button");
+      buttons.createCircuit.name = document.createTextNode("Create Circuit");
+      buttons.saveCircuit = {};
+      buttons.saveCircuit.element = document.createElement("button");
+      buttons.saveCircuit.name = document.createTextNode("Save Circuit");
+      buttons.runCircuit = {};
+      buttons.runCircuit.element = document.createElement("button");
+      buttons.runCircuit.name = document.createTextNode("Run Circuit");
    </script>
 </body>
 </html>
