--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       for(let button in buttons) {
          var pageButton = document.createElement('button');
          pageButton.appendChild(button.text);
+         body.appendChild(pageButton);
       }
    </script>
 </body>
