--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       var buttons = {};
       buttons.createCircuit = {};
       buttons.createCircuit.text = "Create Circuit";
-      buttons.createCircuit.function = "createCircuit()";
+      buttons.createCircuit.function = createCircuit;
       buttons.saveCircuit = {};
       buttons.saveCircuit.text = "Save Circuit";
-      buttons.saveCircuit.function = "saveCircuit()";
+      buttons.saveCircuit.function = saveCircuit;
       buttons.runCircuit = {};
       buttons.runCircuit.text = "Run Circuit";
-      buttons.runCircuit.function = "runCircuit()";
+      buttons.runCircuit.function = runCircuit;
       for(let button in buttons) {
          button = buttons[button];
          var pageButton = document.createElement('input');
