--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
 <head>
    <script src="Scripts/Run.js"></script>
+   <script>
+   function allowDrop(ev) {
+     ev.preventDefault();
+   }
+   
+   function drag(ev) {
+     ev.dataTransfer.setData("text", ev.target.id);
+   }
+   
+   function drop(ev) {
+     ev.preventDefault();
+     var data = ev.dataTransfer.getData("text");
+     ev.target.appendChild(document.getElementById(data));
+   }
+   </script>
 </head>
 <body>
    <script>
