--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       buttons.runCircuit.function = runCircuit;
       for(let button in buttons) {
          button = buttons[button];
-         button.draggable="true"
          var pageButton = document.createElement('input');
          pageButton.type = "button";
          pageButton.value = button.text;
          pageButton.onclick = button.function;
+         pageButton.draggable = "true";
          body.appendChild(pageButton);
       }
       function createCircuit(){
