--- a/index.html
+++ b/index.html
@@ -50,5 +50,8 @@
          console.log("Run");
       }
    </script>
+   <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+   
+   <img id="drag1" src="img_logo.gif" draggable="true" ondragstart="drag(event)" width="336" height="69">
 </body>
 </html>
