--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
      ev.target.appendChild(document.getElementById(data));
    }
    </script>
+   <style>
+      div {
+         outline: 5px;
+      }
+   </style>
 </head>
 <body>
    <script>
