--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
    function drop(ev) {
      ev.preventDefault();
      var data = ev.dataTransfer.getData("text");
+     console.log(data);
+     console.log(ev);
      ev.target.appendChild(document.getElementById(data));
    }
    </script>
